fix: allow horizontal scrolling in map

--- a/assets/game.css
+++ b/assets/game.css
@@ -93,6 +93,7 @@
   white-space: pre;
   font-size: 15px;
   line-height: 1em;
+  overflow: auto;
 }
 
 .map .current-location {
